basic frontend framework